--- a/test.html
+++ b/test.html
@@ -13,56 +13,33 @@
 </head>
 <body>
 <div id="impress" class="impress-not-supported">
+<section>
+	<h1>hoge 1</h1>
+
 	<section>
-		<step class="slide">
-			<p>hoge 1-1</p>
-		</step>
+		<h1>hoge 2</h1>
 	</section>
 
 	<section>
-		<step class="slide">
-			<p>hoge 1-2</p>
-		</step>
-	</section>
-
-	<section>
-		<step class="slide">
-			<p>head1</p>
-		</step>
+		<h1>hoge 3</h1>
+		
+		<section>
+			<h1>hoge 4</h1>
+		</section>
 
 		<section>
-			<step class="slide">
-				<p>head2 1</p>
-			</step>
-		
+			<h1>hoge 5</h1>
+						
 			<section>
-				<step class="slide">
-					<p>head3</p>
-				</step>
-			
-				<section>
-					<step class="slide">
-						<p>head4 1</p>
-					</step>
+				<h1>hoge 6</h1>
+			</section>	
+		</section>
 
-					<step class="slide">
-						<p>head4 2</p>
-					</step>
-
-					<step class="slide">
-						<p>head4 3</p>
-					</step>
-				</section>	
-
-			</section>
-
-			<section>
-				<step class="slide">
-					<p>head3</p>
-				</step>
-			</section>
+		<section>
+			<h1>hoge 7</h1>
 		</section>
 	</section>
+</section>
 </div>
 
 <script src="js/impress.js"></script>
