add twitter bootstrap

--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
-<html lang="jp">
-<head>
-    <meta charset="utf-8" />
-    <title>structure.js</title>
-    
-    <meta name="author" content="yoshimuraYuu" />
-
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
-    <link href="css/structure.css" rel="stylesheet" />
-</head>
-<body>
-
-<div id="structure">
-
-<section>
-	<h1>だれか</h1>
-
-	<section>
-		<h1>いいかんじの</h1>
-	
-		<section>
-			<h1>ホームページを</h1>
-		</section>
-
-		<section>
-			<h1>つくってください</h1>
-		</section>
-	</section>
-</section>
-
-</div>
-
-<script src="js/structure.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="ja">
+	<head>
+		<meta charset="utf-8">
+		<title>coins11.github.com</title>
+		<meta name="description" content="coins11.github.com">
+		<meta name="author" content="ikkun">
+		<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+		<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<!-- Le styles -->
+		<link href="./css/bootstrap.css" rel="stylesheet">
+	</head>
+	<body>
+		<div class="navbar navbar-fixed-top" style="position: relative;">
+			<div class="navbar-inner">
+				<div class="container-fluid">
+					<a href="./" class="brand">coins11.github.com</a>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span3">
+				<ul class="nav nav-tabs nav-stacked">
+					<li>
+						<a href="./">Home</a>
+					</li>
+					<li>
+						<a href="#">誰か</a>
+					</li>
+					<li>
+						<a href="#">いい感じの</a>
+					</li>
+					<li>
+						<a href="#">何かを</a>
+					</li>
+					<li>
+						<a href="#">何かしてください</a>
+					</li>
+				</ul>
+			</div>
+			<div class="span9">
+				<div class="hero-unit">
+					<h1>coins11.github.com</h1>
+					<p>coins = College of INformation Science</p>
+				</div>
+				<div class="row-fluid">
+					<div class="page-header">
+						<h3>これは何？</h3>
+					</div>
+					<p>わかりません。</p>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<footer>
+			<p>&copy; 2012 coins11.github.com</p>
+		</footer>
+		</div>
+	</body>
 </html>
